--- a/xmzhProject/src/log4j.properties
+++ b/xmzhProject/src/log4j.properties
@@ -1,17 +1,17 @@
 #high to low ERROR WARN INFO DEBUG
-log4j.rootLogger=error,console
+log4j.rootLogger=info,console
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender 
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{MM-dd HH:mm:ss.SSS} %-5p %-17c{2}(%13F:%L) - %m%n
 
-log4j.logger.com.ibatis=error
-log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=error
-log4j.logger.com.ibatis.common.jdbc.ScriptRunner=error
-log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=error
-log4j.logger.java.sql.Connection=error
-log4j.logger.java.sql.Statement=error
-log4j.logger.java.sql.PreparedStatement=error
+log4j.logger.com.ibatis=debug  
+log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=debug  
+log4j.logger.com.ibatis.common.jdbc.ScriptRunner=debug  
+log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=debug  
+log4j.logger.java.sql.Connection=debug  
+log4j.logger.java.sql.Statement=debug  
+log4j.logger.java.sql.PreparedStatement=debug,stdout  
 
 log4j.additivity.com.gotop.util.syslog.ActionMonitorLog=false
 log4j.appender.actionMonitor=org.apache.log4j.RollingFileAppender
